Update: Helvetica font, improved responsive, modal About with veil, project navigation indicators, 3 new projects, meowrhino.studio footer

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <p>My projects usually expand the artistic research through tools such as performative lectures, installations and actions linked to specific contexts. After generating an extensive research process on facts that may seem conflicting, I propose anecdotal actions that underline problems that can go unnoticed, as a result of personal worries and the inherent paradoxes in society. I activate "gags" that use the absurd to generate debates where those political, economic and social realities that I consider necessary to highlight are evident.</p>
 
             <p><a href="mailto:maxazemar@gmail.com">maxazemar@gmail.com</a></p>
+
+            <div class="about-footer">
+                <p>web: <a href="https://meowrhino.studio" target="_blank">meowrhino.studio</a></p>
+            </div>
         </div>
     </section>
 
