v2: Windows XP aesthetic, redesigned controls, improved responsive, About popup, documentation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌳 Max Azemar</title>
+    <title>🌳 maxito</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +12,8 @@
     <aside id="sidebar">
         <div class="sidebar-top">
             <div class="language-selector">
-                <button class="lang-btn active" data-lang="es">ES</button>
-                <button class="lang-btn" data-lang="en">EN</button>
+                <button class="lang-btn active" data-lang="es">es</button>
+                <button class="lang-btn" data-lang="en">en</button>
             </div>
         </div>
 
@@ -22,7 +22,7 @@
         </nav>
 
         <div class="sidebar-bottom">
-            <button id="about-btn" class="about-btn">Max Azemar</button>
+            <button id="about-btn" class="about-btn">maxito</button>
         </div>
     </aside>
 
@@ -38,68 +38,67 @@
             </div>
         </div>
 
-        <!-- Controles de navegación -->
-        <nav class="slide-controls">
-            <button id="prev-btn" class="control-btn">←</button>
-            <span id="slide-counter" class="slide-counter"></span>
-            <button id="next-btn" class="control-btn">→</button>
-        </nav>
+        <!-- Controles de navegación rediseñados -->
+        <button id="prev-btn" class="nav-arrow prev">←</button>
+        <button id="next-btn" class="nav-arrow next">→</button>
+        <div id="slide-counter" class="slide-counter"></div>
     </main>
 
     <!-- Panel About -->
     <section id="about-panel" class="about-panel">
-        <button id="about-close" class="about-close">×</button>
         <div class="about-content">
-            <h1>Max Azemar</h1>
-            <p>I'm an Artist and researcher from Barcelona, although my full CV states that I worked in the subway as a Train Driver, in an airplane as a Flight Attendant and currently I'm managing trees as a technician in urban arboriculture, while I may end up working as a crew on a ship. I'm doing my best to blur the gap between art and life.</p>
+            <button id="about-close" class="about-close">×</button>
+            
+            <h1>max azemar</h1>
+            <p>i'm an artist and researcher from barcelona, although my full cv states that i worked in the subway as a train driver, in an airplane as a flight attendant and currently i'm managing trees as a technician in urban arboriculture, while i may end up working as a crew on a ship. i'm doing my best to blur the gap between art and life.</p>
 
-            <h2>Education</h2>
-            <p>2023 Management and maintenance of ornamental trees and palms (CIFO SC.)</p>
-            <p>2022 Master in comparative studies between Literature, Art and Thought (UPF)</p>
-            <p>2021 Auxiliary activities in forest conservation and improvement (EMFO Mollet)</p>
-            <p>2019 Degree in Arts and Design (Escola Massana, UAB. 9,10)</p>
-            <p>2018 ERASMUS+ in Mixed Media (LUCA School of Arts, Ghent, Belgium)</p>
+            <h2>education</h2>
+            <p>2023 management and maintenance of ornamental trees and palms (cifo sc.)</p>
+            <p>2022 master in comparative studies between literature, art and thought (upf)</p>
+            <p>2021 auxiliary activities in forest conservation and improvement (emfo mollet)</p>
+            <p>2019 degree in arts and design (escola massana, uab. 9,10)</p>
+            <p>2018 erasmus+ in mixed media (luca school of arts, ghent, belgium)</p>
 
-            <h2>Lectures and Seminars</h2>
-            <p>2023 Cabaret del Crepúscle, l'horiginal, Barcelona.</p>
-            <p>2023 Presentation of the book "El que no és un arbre", La Capella.</p>
-            <p>2023 Performative conference "El que no és un arbre", IBB.</p>
-            <p>2023 Seminar on "El que no és un arbre", CREAF (UAB).</p>
-            <p>2023 Guided tour "El que no és un arbre", Collserola Visitor Centre.</p>
-            <p>2023 Èxit through the Ale-Hop, MOCO museum, Barcelona. (GDE)</p>
-            <p>2023 Ep. 02: "Sobre el performar", Ralet Ralet Ràdio.</p>
-            <p>2022 Carpa Grup d'Estudi, Fundació Joan Brossa. (GDE)</p>
-            <p>2022 Un arbre per cada cigarreta. Distensions, MACBA.</p>
-            <p>2022 Exhibition View Control Wars, Index Stockholm, Suècia. (GDE)</p>
-            <p>2021 ¿PARA K KIERES SABER ESO? a La Virreina CI. (GDE)</p>
-            <p>2021 Rifa Grup d'Estudi, Distensions, MACBA. (GDE)</p>
-            <p>2021 Conferencias3000, ESTRUCTURAS3000, Esplugues.</p>
+            <h2>lectures and seminars</h2>
+            <p>2023 cabaret del crepúscle, l'horiginal, barcelona.</p>
+            <p>2023 presentation of the book "el que no és un arbre", la capella.</p>
+            <p>2023 performative conference "el que no és un arbre", ibb.</p>
+            <p>2023 seminar on "el que no és un arbre", creaf (uab).</p>
+            <p>2023 guided tour "el que no és un arbre", collserola visitor centre.</p>
+            <p>2023 èxit through the ale-hop, moco museum, barcelona. (gde)</p>
+            <p>2023 ep. 02: "sobre el performar", ralet ralet ràdio.</p>
+            <p>2022 carpa grup d'estudi, fundació joan brossa. (gde)</p>
+            <p>2022 un arbre per cada cigarreta. distensions, macba.</p>
+            <p>2022 exhibition view control wars, index stockholm, suècia. (gde)</p>
+            <p>2021 ¿para k kieres saber eso? a la virreina ci. (gde)</p>
+            <p>2021 rifa grup d'estudi, distensions, macba. (gde)</p>
+            <p>2021 conferencias3000, estructuras3000, esplugues.</p>
 
-            <h2>Curated Exhibitions</h2>
-            <p>2023 OTHER TRASH: STOP THEATRE, Fundació Joan Brossa.</p>
-            <p>2023 La possibilitat de no haver sigut, Santa Mònica. (GDE)</p>
-            <p>2021 Sala Grup d'Estudi, Àngels Barcelona (GDE)</p>
+            <h2>curated exhibitions</h2>
+            <p>2023 other trash: stop theatre, fundació joan brossa.</p>
+            <p>2023 la possibilitat de no haver sigut, santa mònica. (gde)</p>
+            <p>2021 sala grup d'estudi, àngels barcelona (gde)</p>
 
-            <h2>Collective Exhibitions</h2>
-            <p>2022 Mapes d'allò que no pot venir, Sala d'Art Jove.</p>
-            <p>2019 Centrifugacions III: Davant la incertesa, Escola Massana.</p>
-            <p>2018 Reflection, Àngels Barcelona.</p>
+            <h2>collective exhibitions</h2>
+            <p>2022 mapes d'allò que no pot venir, sala d'art jove.</p>
+            <p>2019 centrifugacions iii: davant la incertesa, escola massana.</p>
+            <p>2018 reflection, àngels barcelona.</p>
 
-            <h2>Art Residencies</h2>
-            <p>2023 Climate Care Festival 2023, Floating University, Berlin.</p>
-            <p>2022 Konvent.0, Berga.</p>
-            <p>2021 Plinton Flash Recidency, Àngels Barcelona. (GDE)</p>
-            <p>2019 Apertus 02. Fundació Han Nefkens i Sojung Jun, Escola Massana.</p>
-            <p>2017 Workshop Young Connected Designers, ESAD-Saint-Etienne, França.</p>
+            <h2>art residencies</h2>
+            <p>2023 climate care festival 2023, floating university, berlin.</p>
+            <p>2022 konvent.0, berga.</p>
+            <p>2021 plinton flash recidency, àngels barcelona. (gde)</p>
+            <p>2019 apertus 02. fundació han nefkens i sojung jun, escola massana.</p>
+            <p>2017 workshop young connected designers, esad-saint-etienne, frança.</p>
 
-            <h2>Artistic Awards</h2>
-            <p>2022 Art Jove 2022 Creation Award, Sala d'Art Jove.</p>
-            <p>2020 La Caixa Production award, 2020. (GDE)</p>
-            <p>2019 Finalist of the award of the best bachelors thesis project, Escola Massana.</p>
+            <h2>artistic awards</h2>
+            <p>2022 art jove 2022 creation award, sala d'art jove.</p>
+            <p>2020 la caixa production award, 2020. (gde)</p>
+            <p>2019 finalist of the award of the best bachelors thesis project, escola massana.</p>
 
-            <p><em>*GDE: as a member of Grup d'Estudi</em></p>
+            <p><em>*gde: as a member of grup d'estudi</em></p>
 
-            <p>My projects usually expand the artistic research through tools such as performative lectures, installations and actions linked to specific contexts. After generating an extensive research process on facts that may seem conflicting, I propose anecdotal actions that underline problems that can go unnoticed, as a result of personal worries and the inherent paradoxes in society. I activate "gags" that use the absurd to generate debates where those political, economic and social realities that I consider necessary to highlight are evident.</p>
+            <p>my projects usually expand the artistic research through tools such as performative lectures, installations and actions linked to specific contexts. after generating an extensive research process on facts that may seem conflicting, i propose anecdotal actions that underline problems that can go unnoticed, as a result of personal worries and the inherent paradoxes in society. i activate "gags" that use the absurd to generate debates where those political, economic and social realities that i consider necessary to highlight are evident.</p>
 
             <p><a href="mailto:maxazemar@gmail.com">maxazemar@gmail.com</a></p>
 
