primeros proyectos y limpieza de codigo

--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
                 <img id="slide-image" src="" alt="">
             </div>
             <div class="slide-text-wrapper">
-                <p id="slide-text"></p>
+                <div id="slide-text"></div>
                 <div id="slide-links" class="slide-links"></div>
             </div>
         </div>
 
         <!-- Controles de navegación rediseñados -->
-        <button id="prev-btn" class="nav-arrow prev">←</button>
-        <button id="next-btn" class="nav-arrow next">→</button>
-        <div id="slide-counter" class="slide-counter"></div>
+        <div class="slide-controls">
+            <button id="prev-btn" class="nav-arrow prev">←</button>
+            <div id="slide-counter" class="slide-counter"></div>
+            <button id="next-btn" class="nav-arrow next">→</button>
+        </div>
     </main>
 
     <script src="app.js"></script>
