--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <img id="slide-image" src="" alt="">
             </div>
             <div class="slide-text-wrapper">
+                <div id="slide-thumbs" class="slide-thumbs"></div>
                 <div id="slide-text"></div>
                 <div id="slide-links" class="slide-links"></div>
             </div>
