--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div id="slide-thumbs" class="slide-thumbs"></div>
                 <div id="slide-text"></div>
                 <div id="slide-links" class="slide-links"></div>
+                <div id="slide-footer" class="slide-footer"></div>
             </div>
         </div>
     </main>
