--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>maxito</title>
+    <title>Max Azemar</title>
+    <meta id="meta-description" name="description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta name="author" content="Max Azemar">
+    <meta name="robots" content="index,follow,max-image-preview:large">
+    <meta name="theme-color" content="#f4f0e8">
+    <link id="meta-canonical" rel="canonical" href="https://maxazemar.com/">
+    <link id="alt-ca" rel="alternate" hreflang="ca" href="https://maxazemar.com/">
+    <link id="alt-en" rel="alternate" hreflang="en" href="https://maxazemar.com/?lang=en">
+    <link id="alt-x-default" rel="alternate" hreflang="x-default" href="https://maxazemar.com/">
+
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Max Azemar">
+    <meta id="meta-og-locale" property="og:locale" content="ca_ES">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta id="meta-og-title" property="og:title" content="Max Azemar">
+    <meta id="meta-og-description" property="og:description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta id="meta-og-url" property="og:url" content="https://maxazemar.com/">
+    <meta id="meta-og-image" property="og:image" content="https://maxazemar.com/img/1.webp">
+    <meta id="meta-og-image-alt" property="og:image:alt" content="Portfolio de Max Azemar">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta id="meta-twitter-title" name="twitter:title" content="Max Azemar">
+    <meta id="meta-twitter-description" name="twitter:description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta id="meta-twitter-image" name="twitter:image" content="https://maxazemar.com/img/1.webp">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Max Azemar",
+      "url": "https://maxazemar.com/",
+      "description": "Portfolio de Max Azemar con proyectos de arte, investigación y prácticas performativas.",
+      "inLanguage": ["ca", "en"],
+      "creator": {
+        "@type": "Person",
+        "name": "Max Azemar",
+        "url": "https://maxazemar.com/"
+      }
+    }
+    </script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
