--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ca">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,13 +50,13 @@
     <aside id="sidebar">
         <nav id="project-nav" class="sidebar-nav"></nav>
         <div class="sidebar-controls">
-            <button id="prev-btn" class="nav-arrow">←</button>
+            <button id="prev-btn" class="nav-arrow">&lt;</button>
             <div class="lang-switch">
-                <button class="lang-btn active" data-lang="cat">cat</button>
+                <button class="lang-btn" data-lang="cat">cat</button>
                 <span class="lang-sep">/</span>
-                <button class="lang-btn" data-lang="en">en</button>
+                <button class="lang-btn active" data-lang="en">en</button>
             </div>
-            <button id="next-btn" class="nav-arrow">→</button>
+            <button id="next-btn" class="nav-arrow">&gt;</button>
         </div>
     </aside>
 
@@ -76,13 +76,13 @@
 
     <!-- Mobile-only footer (mirrors sidebar-controls) -->
     <footer id="mobile-footer">
-        <button id="prev-btn-mobile" class="nav-arrow">←</button>
+        <button id="prev-btn-mobile" class="nav-arrow">&lt;</button>
         <div class="lang-switch">
-            <button class="lang-btn-mobile active" data-lang="cat">cat</button>
+            <button class="lang-btn-mobile" data-lang="cat">cat</button>
             <span class="lang-sep">/</span>
-            <button class="lang-btn-mobile" data-lang="en">en</button>
+            <button class="lang-btn-mobile active" data-lang="en">en</button>
         </div>
-        <button id="next-btn-mobile" class="nav-arrow">→</button>
+        <button id="next-btn-mobile" class="nav-arrow">&gt;</button>
     </footer>
 
     <script src="app.js"></script>
