--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Azemar</title>
-    <meta id="meta-description" name="description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta id="meta-description" name="description" content="Portfolio of Max Azemar: art projects, research, and performative practices between art and life.">
     <meta name="author" content="Max Azemar">
     <meta name="robots" content="index,follow,max-image-preview:large">
     <meta name="theme-color" content="#f4f0e8">
     <link id="meta-canonical" rel="canonical" href="https://maxazemar.com/">
-    <link id="alt-ca" rel="alternate" hreflang="ca" href="https://maxazemar.com/">
-    <link id="alt-en" rel="alternate" hreflang="en" href="https://maxazemar.com/?lang=en">
+    <link id="alt-ca" rel="alternate" hreflang="ca" href="https://maxazemar.com/?lang=cat">
+    <link id="alt-en" rel="alternate" hreflang="en" href="https://maxazemar.com/">
     <link id="alt-x-default" rel="alternate" hreflang="x-default" href="https://maxazemar.com/">
 
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Max Azemar">
-    <meta id="meta-og-locale" property="og:locale" content="ca_ES">
-    <meta property="og:locale:alternate" content="en_US">
+    <meta id="meta-og-locale" property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="ca_ES">
     <meta id="meta-og-title" property="og:title" content="Max Azemar">
-    <meta id="meta-og-description" property="og:description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta id="meta-og-description" property="og:description" content="Portfolio of Max Azemar: art projects, research, and performative practices between art and life.">
     <meta id="meta-og-url" property="og:url" content="https://maxazemar.com/">
     <meta id="meta-og-image" property="og:image" content="https://maxazemar.com/img/1.webp">
     <meta id="meta-og-image-alt" property="og:image:alt" content="Portfolio de Max Azemar">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta id="meta-twitter-title" name="twitter:title" content="Max Azemar">
-    <meta id="meta-twitter-description" name="twitter:description" content="Portfolio de Max Azemar: proyectos de arte, investigación y prácticas performativas entre arte y vida.">
+    <meta id="meta-twitter-description" name="twitter:description" content="Portfolio of Max Azemar: art projects, research, and performative practices between art and life.">
     <meta id="meta-twitter-image" name="twitter:image" content="https://maxazemar.com/img/1.webp">
 
     <script type="application/ld+json">
@@ -34,7 +34,7 @@
       "@type": "WebSite",
       "name": "Max Azemar",
       "url": "https://maxazemar.com/",
-      "description": "Portfolio de Max Azemar con proyectos de arte, investigación y prácticas performativas.",
+      "description": "Portfolio of Max Azemar with art projects, research, and performative practices.",
       "inLanguage": ["ca", "en"],
       "creator": {
         "@type": "Person",
