--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 <body>
     <aside id="sidebar">
         <nav id="project-nav" class="sidebar-nav"></nav>
+        <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Expand projects">
+            <span class="toggle-icon">&#9662;</span>
+        </button>
         <div class="sidebar-controls">
             <button id="prev-btn" class="nav-arrow">&lt;</button>
             <div class="lang-switch">
